marker的zindex可以調整了. 關鍵是 optimized 要 全部 false , zIndex 若沒管理好, 會變字重疊, 但因為 obj id 是維一值, 這樣就不會重疊了, 然後 active 設為 99999 即可. 感謝主 1."顯示infowindow" 2.計算到其它marker的距離 3.承上,可以調整它們的路徑 4.承上.路徑的剖面高度圖可以show出來

--- a/tech_gmap1.html
+++ b/tech_gmap1.html
@@ -302,8 +302,10 @@
           $.Enumerable.From(this.state.datas).ForEach(function (a1)
           {
             var jo = a1.Value;
-            if (jo.marker != null)
+            if (jo.marker != null){
               jo.marker.setMap(pthis._map);
+              jo.marker.setOptions({ "optimized": false, "zIndex": parseInt( a1.Key) });
+            }
             if (jo.polyline != null)
               jo.polyline.setMap(pthis._map);
             if (jo.polygon != null)
@@ -320,6 +322,10 @@
           if (this.state.datas[this.state.id_active] != null)
           {
             var jo = this.state.datas[this.state.id_active];
+            if (jo.marker != null)
+            {
+              jo.marker.setOptions({ "optimized": false, "zIndex":99999 });
+            }
             if ( jo.polygon!=null ) 
             {
               jo.polygon.setOptions({
