--- a/tech_gmap1.html
+++ b/tech_gmap1.html
@@ -422,7 +422,7 @@
               var position = paths[0];
               if (a1.otype == 1)//polyline, 在線中點(20就取第10點)
               {
-                position = paths[paths.length / 2];
+                position = paths[Math.floor(paths.length / 2)];
               }
               else if (a1.otype == 2)//polygon , 在中間
               {
