--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
   <script src="https://maps.googleapis.com/maps/api/js?signed_in=true"></script>
   <script src="fhlmap_api/fhlmap.js"></script>
 <script>
-var rfhlmap = null;
+  var rfhlmap = null;
+  var rfhlmap_engs_prev = "";//防止同一章一直載入
+  var rfhlmap_chap_prev = -1;//防止同一章一直載入
+  var rfhlmap_titleId_prev = "";//當切換成地圖以外功能,又切換回來的時候.要切換章才會顯示
 var pageState;
 var currentSWVer="1.0";
 var isfirstob; // ob 典藏用
@@ -2524,24 +2527,25 @@ var fhlInfoContent={
       case "fhlInfoMap":
         // 地圖 map
         {
-          var dom2 = document.getElementById("fhlInfoMap");
-          if (dom2 != null && rfhlmap == null) {
+          var dom2 = document.getElementById("fhlInfoContent");
+          if (dom2 != null && rfhlmap == null || rfhlmap_titleId_prev != "fhlInfoMap") {
+            console.log("recreate");
             rfhlmap = React.render( React.createElement( fhlmap.R.frame) , dom2);
-            //console.log(ps);
-            //if (bookLast != param.engs || chapLast != param.chap) {
-            //  fhl.json_api_text_post("sobj.php?engs=" + param.engs + "&chap=" + param.chap + "", null, function (jstr) {
-            //    //fhl.xml_api_text("sobj?engs=Matt&chap=1", null, function (jstr) {
-            //    var jr1 = JSON.parse(jstr);
-            //    rfhlmap.set_data(jr1.record);
-            //  }, function (er) { });
-            //  bookLast = param.engs;
-            //  chapLast = param.chap;
-            //}
+            rfhlmap_chap_prev = -1;// 為了trigger 下面的 set 函式, 當「rfhlmap_titleId_prev != "fhlInfoMap"」時必須用到, 因為它重新create了
+          }
+          if (rfhlmap_chap_prev != ps.chap || rfhlmap_engs_prev != ps.engs ) {
+            fhl.json_api_text_post("sobj.php?engs=" + ps.engs + "&chap=" + ps.chap + "", null, function (jstr) {
+              var jr1 = JSON.parse(jstr);
+              rfhlmap.set_data(jr1.record);
+            }, function (er) { });
+            rfhlmap_engs_prev = ps.engs;
+            rfhlmap_chap_prev = ps.chap;
           }
         }
         // dom.html("<div style='position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); '>施工中...</div>");
         break;
     }
+    rfhlmap_titleId_prev = ps.titleId;
   }
 };
 
