bug - 會重複刷新 為了能夠切換分頁回來還能生效的變數打錯 造成不斷重複刷新的bug解決. (變數打錯字而已)

--- a/index.html
+++ b/index.html
@@ -2527,7 +2527,7 @@ var fhlInfoContent={
         // dom.html("<div style='position: absolute; left: 50%; top: 50%; transform: translate(-50%, -50%); '>施工中...</div>");
         break;
     }
-    rfhlmap_titleId_prev = ps.titleId; //地圖 map 會用到, 因為切換走分頁, 再切換回來要 re-create render object. see also: fhlmap_render
+    fhlmap_titleId_prev = ps.titleId; //地圖 map 會用到, 因為切換走分頁, 再切換回來要 re-create render object. see also: fhlmap_render
   }
 };
 
