--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
     <!--<script src="https://fb.me/react-0.13.3.min.js"></script>
     <script src="https://fb.me/react-with-addons-0.13.3.min.js"></script>
     <script src="https://fb.me/JSXTransformer-0.13.3.js"></script>-->
-  <script src="https://maps.googleapis.com/maps/api/js?signed_in=true"></script>
   <script src="fhlmap_api/fhlmap.js"></script>
   <script src="fhlmap_api/fhlmap_main.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=geometry&sensor=false"></script>
+  
 <script>
 var pageState;
 var currentSWVer="1.0";
