--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     <script src="tsk_api/tsk.tskapi.js"></script>
     <script src="tsk_api/tsk.R.frame.oneref.js"></script>
 
+  <!-- 講道要用的 2016.01.13 取代原有的 c_preach_frame.js -->
+  <script src="commonR/processbar.js"></script>
+  <script src="commonR/audio.js"></script>
+  <script src="preach_api/preach_api.js"></script>
   <!-- 版權宣告要用的 2016.01.21(四) -->
   <script src="copyright_api/copyright_api.js"></script>
     <!--[if IE]>
@@ -191,7 +195,7 @@ $(function(){
   fhlInfo.init(pageState);
   registerEvents(pageState);
 });
-
+//var urlJSON = "http://bkbible.fhl.net/json/"; // 小雪本機開發要用這個. 上線後要用下面那個 2015.10.24(六)
 var urlJSON="https://bkbible.fhl.net/json/";
 var chineseNumber=new Array( "零", "一", "二", "三", "四", "五", "六", "七", "八", "九", "十",
                             "十一", "十二", "十三", "十四", "十五", "十六", "十七", "十八", "十九", "二十",
@@ -275,7 +279,7 @@ function getAjaxUrl(func,ps,idx){
     };
 
     ret=ret.substring(0,ret.length-1);
-    //console.log(ret);
+    //console.log(ret); //https://bkbible.fhl.net/json/qp.php?engs=Rom&chap=16&sec=27&gb=0
     return ret;
   }
   return getFullAjaxUrl(func,ps,idx);
@@ -2886,36 +2890,56 @@ var parsingPopUp={
   </script>
   <!--講道功能 2015.05.11-->
   <script>
+    var rRender_Preach;
+    var r_Preach;
+    var onset_Preach = function (engs, chap, sec) {
+      //console.log("外部onset");
+      rRender_Preach.setProps({ "engs": engs, "chap": chap, "sec": sec });
+    };
     function do_preach(ps,dom)
     {
-      // 設定 callback function (scphp.set會呼叫)
-      scphp.pfn_set_after = function pfn_set_after(rediv) {
-        dom.html(rediv);
+      var dom2 = document.getElementById("fhlInfoContent");
+      if (dom2 != null) {
+        r_Preach = React.createElement(preach_api.R.frame, {
+          "engs": ps.engs,
+          "chap": ps.chap,
+          "sec": ps.sec,
+          "onset": onset_Preach
+        });
+        rRender_Preach = React.render(r_Preach, dom2);
+      }
 
-        // 四個樣式可設定 (可變更...現在只是隨便設)
-        //for (var idx in scphp.divbooknames)//主題
-        //  $(scphp.divbooknames[idx]).addClass("search_type");
-        //for (var idx in scphp.divtitles)//範圍
-        //  $(scphp.divtitles[idx]).addClass("search_type");
-        for (var idx in scphp.divnexts)//範圍
-          $(scphp.divnexts[idx]).addClass("search_type");
-        for (var idx in scphp.divprevs)//範圍
-          $(scphp.divprevs[idx]).addClass("search_type");
-      }; // 設定 callback function (scphp.set會呼叫)
+      
 
-      // 設定 callback function (onclick時會呼叫)
-      scphp.pfn_goto_sec = function pfn_(engs, chap, sec) {
-        var idx = getBookFunc("indexByEngs", engs);
-        ps.chineses = book[idx];
-        ps.engs = engs;
-        ps.chap = chap;
-        ps.sec = sec;
-        bookSelect.render(pageState, bookSelect.dom);
-        fhlLecture.render(pageState, fhlLecture.dom);
-        fhlInfo.render(pageState);
-      }; // 設定 callback function (onclick時會呼叫)
 
-      scphp.set(ps.engs, ps.chap, ps.sec);
+      //// 設定 callback function (scphp.set會呼叫)
+      //scphp.pfn_set_after = function pfn_set_after(rediv) {
+      //  dom.html(rediv);
+
+      //  // 四個樣式可設定 (可變更...現在只是隨便設)
+      //  //for (var idx in scphp.divbooknames)//主題
+      //  //  $(scphp.divbooknames[idx]).addClass("search_type");
+      //  //for (var idx in scphp.divtitles)//範圍
+      //  //  $(scphp.divtitles[idx]).addClass("search_type");
+      //  for (var idx in scphp.divnexts)//範圍
+      //    $(scphp.divnexts[idx]).addClass("search_type");
+      //  for (var idx in scphp.divprevs)//範圍
+      //    $(scphp.divprevs[idx]).addClass("search_type");
+      //}; // 設定 callback function (scphp.set會呼叫)
+
+      //// 設定 callback function (onclick時會呼叫)
+      //scphp.pfn_goto_sec = function pfn_(engs, chap, sec) {
+      //  var idx = getBookFunc("indexByEngs", engs);
+      //  ps.chineses = book[idx];
+      //  ps.engs = engs;
+      //  ps.chap = chap;
+      //  ps.sec = sec;
+      //  bookSelect.render(pageState, bookSelect.dom);
+      //  fhlLecture.render(pageState, fhlLecture.dom);
+      //  fhlInfo.render(pageState);
+      //}; // 設定 callback function (onclick時會呼叫)
+
+      //scphp.set(ps.engs, ps.chap, ps.sec);
     }//do_preach
   </script><!--講道功能 2015.05.11-->
 </head>
