--- a/index.html
+++ b/index.html
@@ -32,6 +32,22 @@
     <script src="ob_api/obphp.js"></script>
     <!--搜尋結果上色要用的 2015.10.29(四)-->
     <script src="search_api/sephp.react.txt.txtSn.js"></script> 
+   <!--Start of 搜尋功能-->
+    <script src="libs/linq.js_ver2.2.0.2/linq.min.js"></script>
+    <script src="libs/linq.js_ver2.2.0.2/jquery.linq.min.js"></script>
+    <script src="search_api/abvphp_api.js"></script>
+    <script src="search_api/fhl_api.js"></script>
+    <!--<script src="preach_api/c_preach_frame.js"></script>--> <!--講道功能 被 preach_api 取代 react.js -->
+
+    <link href="search_api/search.css" rel="stylesheet" />
+    <script src="search_api/qsbphp.create_color_span_from_bible_text.js"></script>
+    <script src="search_api/sephp.se_record_2_qsb_str.js"></script>
+    <script src="search_api/qsbphp.search_reference.js"></script>
+    <script src="search_api/sephp.pre_search_sn.js"></script>
+    <script src="search_api/sephp.pre_search_keyword.js"></script>
+    <script src="search_api/sephp.create_dialog_presearch.js"></script>
+    <script src="search_api/sephp.create_dialog_search_result.js"></script>
+    <script src="search_api/sephp.search.js"></script>
     <!-- 串珠要用的 2015.11.19(五) -->
     <script src="qsb_api/qsb.qsbapi.js"></script>
     <script src="tsk_api/tsk.tskapi.js"></script>
@@ -41,6 +57,7 @@
   <script src="commonR/processbar.js"></script>
   <script src="commonR/audio.js"></script>
   <script src="preach_api/preach_api.js"></script>
+
   <!-- 版權宣告要用的 2016.01.21(四) -->
   <script src="copyright_api/copyright_api.js"></script>
     <!--[if IE]>
@@ -56,9 +73,11 @@
   <script src="https://maps.googleapis.com/maps/api/js?signed_in=true&libraries=geometry&sensor=false"></script>
   
 <script>
+
 var pageState;
 var currentSWVer="1.0";
 var isfirstob; // ob 典藏用
+
 function setPageState(ps){
   var isViewed=false;
   var dstIndex;
@@ -197,6 +216,8 @@ $(function(){
 });
 //var urlJSON = "http://bkbible.fhl.net/json/"; // 小雪本機開發要用這個. 上線後要用下面那個 2015.10.24(六)
 var urlJSON="https://bkbible.fhl.net/json/";
+
+
 var chineseNumber=new Array( "零", "一", "二", "三", "四", "五", "六", "七", "八", "九", "十",
                             "十一", "十二", "十三", "十四", "十五", "十六", "十七", "十八", "十九", "二十",
                             "二十一", "二十二", "二十三", "二十四", "二十五", "二十六", "二十七", "二十八", "二十九", "三十",
@@ -1226,6 +1247,7 @@ var versionSelect={
           //Set Default version?
           if(ps.version.length==0){
             var o=that.dom.find('li:eq(0)');
+            $(o).addClass("selected"); 
             ps.version.push(o.attr('book'));
             ps.cname.push(o.attr('cname'));
           }
@@ -1948,6 +1970,7 @@ var fhlInfoTitle={
     $(selectAll).click(function(){
       $(selectAll).removeClass('selected');
       $(this).addClass('selected');
+      ps.titleIdold = ps.titleId; // add 2015.12.10(四) 為了有聲聖經,切換問題
       ps.titleId=$(this).attr('id');
       setPageState(ps);
       fhlInfoContent.render(ps,fhlInfoContent.dom);
@@ -2115,8 +2138,12 @@ var fhlInfoContent={
         $.ajax({
           url:ajaxUrl
         }).done(function(d,s,j){
+          //console.log(d);// d 是回傳 純文字版, 但直接 JSON.parse 就要要用到的資料 (羅16:24有問題)
+          //console.log(s);// s 是回傳 success 字串
+          //console.log(j);// j 是回傳 ??物件, 總之 j.responseText 即是 d
           if(j){
             var jsonObj=JSON.parse(j.responseText);
+            //console.log(jsonObj);
             var v_name=jsonObj.v_name;
             var version=jsonObj.version;
             var prev_chineses=jsonObj.prev.chineses;
@@ -2543,14 +2570,15 @@ var fhlInfoContent={
           var dom2 = document.getElementById("fhlInfoContent");
           if (dom2 != null)
           {
-            var renderobj = React.render(obphp.r.frame, dom2);
-            //console.log(ps);
-            renderobj.setProps({
+            var rProp = {
               ibook: getBookFunc("indexByEngs", ps.engs),
               ichap: ps.chap,
               isec: ps.sec,
-              isgb: (ps.gb!=0)?true:false
-            });
+              isgb: ps.gb ? true : false,
+              cy: $(dom2).height()
+            };
+            var r = React.createElement(obphp.R.frame, rProp);// r:react Ob:(Old Bible) Frame
+            var renderobj = React.render(r, dom2);
           }
         break;
       case "fhlInfoAudio":
@@ -2566,9 +2594,13 @@ var fhlInfoContent={
             fhlInfo.render(pageState);
           };
           var idx = getBookFunc("index", ps.chineses); // 0-based
-          //ps.chap; // 1-based
-          audiobible.g_audiobible.set_book_chap(idx, ps.chap - 1, dom[0]);
-          audiobible.g_audiobible.m_pfn_after_set = pfn_callback;
+
+          // add 2015.12.10(四) snow, 若是沒加這個條件, (前兩個, 點到節的時候會重播...但根本是同一章,不該重播), (第3個...若只加前2個條件, 不加第3個, 在從其它功能(例如典藏...切回來有聲...就不會render了)
+          if (audiobible.g_audiobible.m_ibook != idx || audiobible.g_audiobible.m_ichap != ps.chap - 1 || ps.titleId != ps.titleIdold) {
+            //ps.chap; // 1-based
+            audiobible.g_audiobible.set_book_chap(idx, ps.chap - 1, dom[0]);
+            audiobible.g_audiobible.m_pfn_after_set = pfn_callback;
+          }
         }
         break;
       case "fhlInfoMap":
@@ -2716,8 +2748,18 @@ var parsingPopUp={
         url:ajaxUrl
       }).done(function(d,s,j){
         var jsonObj=JSON.parse(j.responseText);
-        var title="<span class='searchSN' N="+jsonObj.record[0].dic_type+" k="+
-                jsonObj.record[0].sn+">";
+
+        // replace 2015.10.29(四) snow
+        // 使用 j.responseText 的 .sn=00430, 但顯示是 0430, 要用 0430作為關鍵字, 才會被畫上藍色, 因為00430不等於0430 (snow) 2015.10.29(四)
+        // 因此. 出現經文按下去的時候. 若是k=00430, 就不會有正確的畫出藍色
+        // "record":[{"sn":"00430","dic_text":"0430  ... 這是 j.responseText 局部
+        var snShow = /[0-9]+/.exec(jsonObj.record[0].dic_text); //add 2015.10.29(四)
+        var title = "";
+        if (snShow == null)
+          title = "<span class='searchSN' N=" + jsonObj.record[0].dic_type + " k=" + jsonObj.record[0].sn + ">";//原本的
+        else
+          title = "<span class='searchSN' N=" + jsonObj.record[0].dic_type + " k=" + snShow[0] + ">";
+        //var title="<span class='searchSN' N="+jsonObj.record[0].dic_type+" k="+jsonObj.record[0].sn+">"; //mark 2015.10.29(四) snow
         title+="出現經文</span></br>";
         var html=jsonObj.record[0].dic_text;
         html=parseDic(html);
@@ -2748,21 +2790,6 @@ var parsingPopUp={
 /***** End of fhlInfo *****/
   </script>
   <!--Start of 搜尋功能-->
-  <script src="libs/linq.js_ver2.2.0.2/linq.min.js"></script>
-  <script src="libs/linq.js_ver2.2.0.2/jquery.linq.min.js"></script>
-  <script src="search_api/abvphp_api.js"></script>
-  <script src="search_api/fhl_api.js"></script>
-  <script src="preach_api/c_preach_frame.js"></script> <!--講道功能-->
-
-  <link href="search_api/search.css" rel="stylesheet" />
-  <script src="search_api/qsbphp.create_color_span_from_bible_text.js"></script>
-  <script src="search_api/sephp.se_record_2_qsb_str.js"></script>
-  <script src="search_api/qsbphp.search_reference.js"></script>
-  <script src="search_api/sephp.pre_search_sn.js"></script>
-  <script src="search_api/sephp.pre_search_keyword.js"></script>
-  <script src="search_api/sephp.create_dialog_presearch.js"></script>
-  <script src="search_api/sephp.create_dialog_search_result.js"></script>
-  <script src="search_api/sephp.search.js"></script>
   <script>
     var searchTool={
         init:function(ps,dom){
