a2x-tw.fhl.net以a2x.fhl.net取代. 回報加上小雪mail

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ $(function(){
     setPageState(pageState);
   }
   
-  $('#problemsReport').attr( "href", "mailto:sean@fhl.net,tjm@fhl.net?subject=[問題回報] 信望愛聖經工具NUI");
+  $('#problemsReport').attr( "href", "mailto:sean@fhl.net,tjm@fhl.net,snowray712000@gmail.com?subject=[問題回報] 信望愛聖經工具NUI");
   fhlToolBar.init(pageState);
   fhlLeftWindow.init(pageState);
   fhlMidWindow.init(pageState);
@@ -2982,8 +2982,8 @@ var parsingPopUp={
                 <li><a target="_blank" href="https://bkbible.fhl.net/NUI/"> 讀經介面(new)</a></li>
                 <li><a target="_blank" href="https://bible.fhl.net/new/record.html"> 閱讀計劃</a></li>
                 <li><a target="_blank" href="https://bible.fhl.net/daily/sy_fhl.php"> 讀經計劃表</a></li>
-                <li><a target="_blank" href="http://a2z-tw.fhl.net/fore/"> 主題研經</a></li>
-                <li><a target="_blank" href="http://a2z-tw.fhl.net/bible/"> 專卷研經</a></li>
+                <li><a target="_blank" href="http://a2z.fhl.net/fore/"> 主題研經</a></li>
+                <li><a target="_blank" href="http://a2z.fhl.net/bible/"> 專卷研經</a></li>
             </ul>
         </li>
         <li><a href="#"><span>教學</span></a>
@@ -3019,9 +3019,9 @@ var parsingPopUp={
         <li><a href="#"><span>專欄</span></a>
             <ul class="menu-hover">
                 <li><a target="_blank" href="https://www.fhl.net/main/what_new.html"> 電子報</a></li>
-                <li><a target="_blank" href="http://a2z-tw.fhl.net/history/"> 歷史走廊</a></li>
+                <li><a target="_blank" href="http://a2z.fhl.net/history/"> 歷史走廊</a></li>
                 <li><a target="_blank" href="https://bible.fhl.net/wu/"> 英雄本色</a></li>
-                <li><a target="_blank" href="http://a2z-tw.fhl.net/textual/"> 經文鑑別</a></li>
+                <li><a target="_blank" href="http://a2z.fhl.net/textual/"> 經文鑑別</a></li>
                 <li><a target="_blank" href="https://bible.fhl.net/cover/"> 信望愛論壇</a></li>
                 <li><a target="_blank" href="https://bible.fhl.net/preach/"> 神學與生活</a></li>
                 <li><a target="_blank" href="https://bible.fhl.net/sundayschool/"> 主日學教育</a></li>
